feat: add roles & filters
